Do Testimonial Color Correction

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="bar border__Rad_10"></div>
                 </div>
 
-                <div class="logo">OPENHOUSE</div>
+                <div class="logo">AMPLEARC</div>
                 <div class="navMenuContainer">
                     <div class="nav-items">
                         <a href="#projectGallery">PROJECT GALLERY</a>
@@ -245,7 +245,7 @@
                 <img src="svgs/quote1.svg" alt="second quote">
             </div>
             <div class="progressBar">
-                <div></div>
+                <div id="progressRunner"></div>
             </div>
         </div>
 
@@ -271,11 +271,12 @@
                 <img src="svgs/quote1.svg" alt="second quote">
             </div>
             <div class="progressBar">
-                <div></div>
+                <div id="progressRunner"></div>
             </div>
         </div>
 
         <!-- TESTIMONIAL SECTION -->
+
         <div class="testimonial">
             <div>
                 <div class="circle_profile">
@@ -297,7 +298,7 @@
                 <img src="svgs/quote1.svg" alt="second quote">
             </div>
             <div class="progressBar">
-                <div></div>
+                <div id="progressRunner"></div>
             </div>
         </div>
 
@@ -941,7 +942,7 @@
             </div>
             <div class="emailDiv">
                 <div class="emailBox">
-                    <input type="email" placeholder="Type Your Email">
+                    <input type="email" placeholder="Type Your Email" required>
                 </div>
                 <div class="emailButton">
                     <input type="submit" value="SUBSCRIBE">
@@ -949,17 +950,18 @@
             </div>
         </div>
     </div>
-    <!------------------------------
+    <!---------------------------------------
             SUBSCRIBE US END
-    ------------------------------->
+    --------------------------------------->
+
     <!---------------------------------------
                 PROJECTS FOOTER START
     ---------------------------------------->
 
     <footer class="footer">
         <div class="row ColAlignLeft">
-            <p>ZAMMER</p>
-            <p>Trust by Milion</p>
+            <p>AMPLEARC</p>
+            <p style="font-size: 0.6rem; color:#a3a8ac;">Trust by Milion</p>
         </div>
         <div class="row">
             <div class="col flexJustifyStart">
