Team Code correction

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
 
     <footer class="footer">
         <div class="row ColAlignLeft">
-            <p>AMPLEARC</p>
+            <p class="logo">AMPLEARC</p>
             <p style="font-size: 0.6rem; color:#a3a8ac;">Trust by Milion</p>
         </div>
         <div class="row">
