parallax bottom svg added

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h1>NEW INNOVATION</h1>
         </div>
         <div class="ohp-bottomTop">
-            <img src="bottom.svg" alt="">
+            <img src="svgs/bottom.svg" alt="">
         </div>
     </div>
     <!---------------------------------------
